# ConSentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
consentinel/: __init__.py  __main__.py  cli.py  constants.py  models.py  owasp.py
consentinel/checks/: __init__.py  agency.py  astutil.py  base.py  injection.py  poisoning.py  secrets.py  transport.py
consentinel/extract/: __init__.py  base.py  python_ast.py
consentinel/report/: __init__.py  json_report.py  markdown.py  terminal.py
examples/vulnerable_server/: fastmcp_server.py  lowlevel_server.py
scripts/: render_demo.py
tests/: _util.py  conftest.py  test_agency.py  test_extract.py  test_injection.py  test_poisoning.py  test_secrets.py  test_transport.py
