[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consentinel"
version = "0.1.0"
description = "Static safeguard-enforcement auditor for MCP servers: finds tools that perform irreversible or externally side-effecting actions and lack an enforced human-in-the-loop safeguard."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Consentinel contributors" }]
keywords = ["mcp", "security", "audit", "static-analysis", "excessive-agency", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
consentinel = "consentinel.cli:app"

[project.urls]
Homepage = "https://github.com/consentinel/consentinel"
Repository = "https://github.com/consentinel/consentinel"

[tool.hatch.build.targets.wheel]
packages = ["consentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
